fix: sections active state while scrolling is now visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,10 @@ section.your-active-class .landing__container::after {
 		           rotate(-360deg);
 	}
 }
+section.active {
+    background: darkblue;
+}
 section.active h2 {
     color: #cc1;
+    background: darkblue;
 }
